# CSIRE2023

./: CMakeCache.txt  CMakeLists.txt  Makefile  POLYTOOBJ.cbp  README.md  TERM=xterm-256color  bicycle.poly  cmake_install.cmake  polyToObj  polyToObj.cpp  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp
CGAL_Qt5_moc_and_resources_autogen/: moc_predefs.h  mocs_compilation.cpp
CGAL_Qt5_moc_and_resources_autogen/A7UV7OXVE2/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
data/: part0.poly  part1_0_0.poly  part20.poly  part54.poly  part54_uv.poly  part5_0_2.poly  part5_0_2.sharp.poly  part5_0_3.poly  right_side.poly
